--- a/Tereshkov_Artem/2.2
+++ b/Tereshkov_Artem/2.2
@@ -101,7 +101,7 @@ void Alice_salary(const int month)
         Alice.account += Alice.salary;
     }
         if (month % 3 == 0) {
-        Alice.account += Alice.premium;
+        Alice.account += Alice.premia;
     }
 }
 
